tests/sumo/basic/tls/errors/invalid_state/errors.sumo
Warning: Missing green phase in tlLogic '0', program 'broken' for tl-index 0
